# try-working-hard

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  README.zh-TW.md  build.ps1  main.py  pyproject.toml
.cursor/commands/: pr-to-develop.md
.cursor/rules/: english-only-content.mdc  update-changelog-and-readme-complement.md
.cursor/skills/dev-branch-auto/: SKILL.md
.cursor/skills/open-pr-to-develop/: SKILL.md
.cursor/skills/release-tag-pr-to-master/: SKILL.md
.github/workflows/: ci.yml  release.yml
components/: custom_table.py  one_time_reminder_dialog.py  sidebar_button.py  stat_card.py  toast.py
docs/: ACCESSIBILITY.md  WINDOWS-BUILD.md
mouse_jiggler/: __init__.py  __main__.py  analytics_charts.py  analytics_store.py  app.py  app_icon.py  contact_info.py  cursor_nudge.py  local_config.py  nudge_logic.py  schedule_window.py  strings.py  tray.py  updater.py  win32_mouse.py
packaging/: generate_icons.py  try-working-hard.iss  try-working-hard.spec
scripts/: open-pr-to-develop.ps1
styles/: styles.qss
tests/: test_analytics_store.py  test_cursor_nudge.py  test_local_config.py  test_nudge_logic.py  test_schedule_window.py  test_strings_templates.py  test_updater.py  test_win32_mouse_smoke.py
ui/: jiggler_runtime.py  main_window.py  preferences_store.py  view_model.py
views/: dashboard_page.py  settings_page.py  tasks_page.py
