[project]
name = "try-working-hard"
version = "1.2.0"
description = "Scheduled subtle mouse movement on Windows (GUI)."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "customtkinter>=5.2.0",
    "matplotlib>=3.8.0",
    "pystray>=0.19.5",
    "pillow>=10.0.0",
    "pyside6>=6.9.0",
    "pyqtgraph>=0.14.0",
]

[project.scripts]
try-working-hard = "mouse_jiggler:main"

[project.optional-dependencies]
build = [
    "pyinstaller>=6.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# With project name try-working-hard, hatchling defaults to a try_working_hard package dir;
# the real package is mouse_jiggler, so we pin it explicitly.
[tool.hatch.build.targets.wheel]
packages = ["mouse_jiggler"]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
